# XcodeClangInjectPlugin

./: CMakeLists.txt  README.md
dummy/: Dummy.cpp
loader/: Loader.cpp
plugin/: CodeStyle.cpp
scripts/: inject.sh  install.sh
